# C4

./: .gitmodules  CMakeLists.txt  README.md  c4.cxx  c4.h
Dependencies/: CMakeLists.txt
doxygen/: CMakeLists.txt
include/: C4.h  CMakeLists.txt  KeyKeyValueStore.h
src/: C4.tpp  CMakeLists.txt  KeyKeyValueStore.cpp  KeyKeyValueStore.tpp
tests/: CMakeLists.txt  c4_tests.h  t_c4_basic.cxx
thrift/: C4Service.thrift
